more examples + correct load

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "id": "e5244d15",
    "metadata": {},
    "outputs": [
@@ -67,10 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "id": "ab690789",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lucas/adverserial-cybersecurity/.venv/lib64/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "id": "436ae18e",
    "metadata": {},
    "outputs": [
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "id": "0f88fe73",
    "metadata": {},
    "outputs": [
@@ -192,19 +200,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading CLIP model...\n",
-      "Failed to load TinyCLIP: Failed initial config/weights load from HF Hub microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M: Failed to download file (open_clip_config.json) for microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M. Last error: 404 Client Error. (Request ID: Root=1-68f82328-242bfc0e0843e20d10d992f5;716c6a5c-f480-466a-979c-935e738d82aa)\n",
-      "\n",
-      "Repository Not Found for url: https://huggingface.co/microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M/resolve/main/open_clip_config.json.\n",
-      "Please make sure you specified the correct `repo_id` and `repo_type`.\n",
-      "If you are trying to access a private or gated repo, make sure you are authenticated. For more details, see https://huggingface.co/docs/huggingface_hub/authentication\n",
-      "Falling back to OpenCLIP ViT-B/32...\n"
+      "Loading CLIP model...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Failed to load TinyCLIP: Failed initial config/weights load from HF Hub microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M: Failed to download file (open_clip_config.json) for microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M. Last error: 404 Client Error. (Request ID: Root=1-69028e84-53b01f272844364e4a19e063;96bb1959-950e-490c-8e02-20b3a6b1e9f2)\n",
+      "\n",
+      "Repository Not Found for url: https://huggingface.co/microsoft/TinyCLIP-ViT-8M-16-Text-3M-YFCC15M/resolve/main/open_clip_config.json.\n",
+      "Please make sure you specified the correct `repo_id` and `repo_type`.\n",
+      "If you are trying to access a private or gated repo, make sure you are authenticated. For more details, see https://huggingface.co/docs/huggingface_hub/authentication\n",
+      "Falling back to OpenCLIP ViT-B/32...\n",
       "Successfully loaded OpenCLIP ViT-B/32\n",
       "Model loaded on: cuda\n"
      ]
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "id": "3728b433",
    "metadata": {},
    "outputs": [
@@ -309,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "id": "764b920e",
    "metadata": {},
    "outputs": [
@@ -317,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function tokenize at 0x7f5a5367ba60>\n"
+      "<function tokenize at 0x7fdaa8741e40>\n"
      ]
     }
    ],
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "id": "4d850a36",
    "metadata": {},
    "outputs": [
@@ -344,7 +352,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calibration: 100%|██████████| 200/200 [00:03<00:00, 61.20it/s]"
+      "Calibration: 100%|██████████| 200/200 [00:03<00:00, 61.15it/s]"
      ]
     },
     {
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "id": "c44228c7",
    "metadata": {},
    "outputs": [
@@ -655,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "id": "19bbc619",
    "metadata": {},
    "outputs": [],
@@ -673,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "id": "383af07a",
    "metadata": {},
    "outputs": [],
@@ -727,10 +735,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "id": "8891480b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading small_encoded_nounlist.pkl\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -834,14 +849,14 @@
        "[6801 rows x 2 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#check if small_encoded_nounlist.pkl exists\n",
-    "if os.path.exists(\"small_encoded_nounlist.pkl\"):\n",
+    "if not os.path.exists(\"small_encoded_nounlist.pkl\"):\n",
     "    # load nounlist.csv\n",
     "    nounlist = pd.read_csv('nounlist.csv', header=None)\n",
     "    nounlist.columns = ['nouns']\n",
@@ -860,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "id": "acaab9e3",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "088675d7",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1199,20 @@
     "}\n",
     "\n",
     "result = attack(test_image, test_pair['caption'], test_api, attack_budgets, verbose=True)\n",
-    "print(f\"Attack success: {result['success']}\")"
+    "print(f\"Attack success: {result['success']}\")\n",
+    "\n",
+    "#test a couple more samples\n",
+    "for i in range(1,4):\n",
+    "    print(\"\\nTesting attack function on another sample...\")\n",
+    "    test_pair = val_pairs[i]\n",
+    "    test_image = np.array(load_image_from_pair(test_pair))\n",
+    "\n",
+    "    # Create fresh API instance  \n",
+    "    test_api = BlackBoxAPI(alpha, beta, q_max=100)\n",
+    "\n",
+    "\n",
+    "    result = attack(test_image, test_pair['caption'], test_api, attack_budgets, verbose=True)\n",
+    "    print(f\"Attack success: {result['success']}\")"
    ]
   },
   {
